[package]
name = "lithium"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crypto-hash = "0.3.4"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
rand = "0.8.4"
dotenv = "0.15.0"